--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </section>
       <section class="advantages">
         <div class="container">
-          <h2>Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-subtitle">Strategy</h3>
